--- a/index.html
+++ b/index.html
@@ -1226,7 +1226,7 @@
                 <div class="apartment-card card-3d" data-apartment="1">
                     <div class="card-3d-inner">
                         <div class="apartment-image">
-                            <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Luxury Studio">
+                            <img src="c:\Users\LINUX\Desktop\casa bonita\ph all\mkdir app7\WhatsApp Image 2026-01-31 at 11.01.21.jpeg" alt="Luxury Studio">
                         </div>
                         <div class="apartment-content">
                             <h3>Apartment 1 - 80m²</h3>
@@ -1342,7 +1342,7 @@
                 <div class="apartment-card card-3d" data-apartment="5">
                     <div class="card-3d-inner">
                         <div class="apartment-image">
-                            <img src="https://images.unsplash.com/photo-1540518614846-7eded102d7bf?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Penthouse">
+                            <img src="c:\Users\LINUX\Desktop\casa bonita\ph all\mkdir app7\WhatsApp Image 2026-01-31 at 11.01.21.jpeg" alt="Penthouse">
                         </div>
                         <div class="apartment-content">
                             <h3>Apartment 5 - 70m²</h3>
@@ -1599,7 +1599,7 @@
                 description: "Luxurious apartment with expansive living area, ideal for larger families or groups seeking comfort and space. This apartment features premium finishes, a spacious layout, and all modern amenities for a comfortable stay.",
                 size: "120 m²",
                 capacity: "6 people",
-                beds: "1 large bed + 2 small beds",
+                beds: "1 large bed + 4 small beds",
                 features: [
                     "High-speed Wi-Fi",
                     "Smart TV",
@@ -1625,7 +1625,7 @@
                 description: "Elegant apartment with generous living space, perfect for families who appreciate style and comfort. This unit offers a harmonious blend of functionality and aesthetic appeal with its thoughtful layout and premium amenities.",
                 size: "120 m²",
                 capacity: "6 people",
-                beds: "1 large bed + 2 small beds",
+                beds: "1 large bed + 4 small beds",
                 features: [
                     "High-speed Wi-Fi",
                     "Smart TV",
@@ -1682,18 +1682,20 @@
                     "High-speed Wi-Fi",
                     "Smart TV",
                     "Fully equipped kitchen",
-                    "Air conditioning",
-                    "Weekly cleaning service",
                     "Parking space",
                     "Security surveillance",
                     "Compact living area",
                     "Modern bathroom"
                 ],
                 images: [
-                    "https://images.unsplash.com/photo-1540518614846-7eded102d7bf?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80",
-                    "https://images.unsplash.com/photo-1522708323590-d24dbb6b0267?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80",
-                    "https://images.unsplash.com/photo-1586023492125-27b2c045efd7?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80",
-                    "https://images.unsplash.com/photo-1560448204-603b3fc33ddc?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
+                    "c:\\Users\\LINUX\\Desktop\\casa bonita\\ph all\\mkdir app7\\WhatsApp Image 2026-01-31 at 11.01.21 (2).jpeg",
+                    "c:\\Users\\LINUX\\Desktop\\casa bonita\\ph all\\mkdir app7\\WhatsApp Image 2026-01-31 at 11.01.21 (3).jpeg",
+                    "c:\\Users\\LINUX\\Desktop\\casa bonita\\ph all\\mkdir app7\\WhatsApp Image 2026-01-31 at 11.01.21 (1).jpeg",
+                    "c:\\Users\\LINUX\\Desktop\\casa bonita\\ph all\\mkdir app7\\WhatsApp Image 2026-01-31 at 11.01.20.jpeg",
+                    "c:\Users\LINUX\Desktop\casa bonita\ph all\mkdir app7\WhatsApp Image 2026-01-31 at 11.01.20 (1).jpeg",
+                    "c:\Users\LINUX\Desktop\casa bonita\ph all\mkdir app7\WhatsApp Image 2026-01-31 at 11.01.21 (3).jpeg",
+                    "c:\Users\LINUX\Desktop\casa bonita\ph all\mkdir app7\WhatsApp Image 2026-01-31 at 11.01.21 (4).jpeg",
+                    "c:\Users\LINUX\Desktop\casa bonita\ph all\mkdir app7\WhatsApp Image 2026-01-31 at 11.01.21 (5).jpeg"
                 ]
             },
             6: {
@@ -1707,13 +1709,10 @@
                     "High-speed Wi-Fi",
                     "Smart TV",
                     "Fully equipped kitchen",
-                    "Air conditioning",
-                    "Weekly cleaning service",
                     "Parking space",
                     "Security surveillance",
                     "Cozy living area",
                     "Modern bathroom",
-                    "15% discount for stays longer than a month"
                 ],
                 images: [
                     "https://images.unsplash.com/photo-1555854876-c77ea01f84da?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80",
