--- a/index.html
+++ b/index.html
@@ -1226,7 +1226,7 @@
                 <div class="apartment-card card-3d" data-apartment="1">
                     <div class="card-3d-inner">
                         <div class="apartment-image">
-                            <img src="c:\Users\LINUX\Desktop\casa bonita\ph all\mkdir app7\WhatsApp Image 2026-01-31 at 11.01.21.jpeg" alt="Luxury Studio">
+                            <img src="" alt="Luxury Studio">
                         </div>
                         <div class="apartment-content">
                             <h3>Apartment 1 - 80m²</h3>
@@ -1342,7 +1342,7 @@
                 <div class="apartment-card card-3d" data-apartment="5">
                     <div class="card-3d-inner">
                         <div class="apartment-image">
-                            <img src="c:\Users\LINUX\Desktop\casa bonita\ph all\mkdir app7\WhatsApp Image 2026-01-31 at 11.01.21.jpeg" alt="Penthouse">
+                            <img src="image/mkdir app5/image 1.jpeg" alt="Penthouse">
                         </div>
                         <div class="apartment-content">
                             <h3>Apartment 5 - 70m²</h3>
@@ -1688,14 +1688,13 @@
                     "Modern bathroom"
                 ],
                 images: [
-                    "c:\\Users\\LINUX\\Desktop\\casa bonita\\ph all\\mkdir app7\\WhatsApp Image 2026-01-31 at 11.01.21 (2).jpeg",
-                    "c:\\Users\\LINUX\\Desktop\\casa bonita\\ph all\\mkdir app7\\WhatsApp Image 2026-01-31 at 11.01.21 (3).jpeg",
-                    "c:\\Users\\LINUX\\Desktop\\casa bonita\\ph all\\mkdir app7\\WhatsApp Image 2026-01-31 at 11.01.21 (1).jpeg",
-                    "c:\\Users\\LINUX\\Desktop\\casa bonita\\ph all\\mkdir app7\\WhatsApp Image 2026-01-31 at 11.01.20.jpeg",
-                    "c:\Users\LINUX\Desktop\casa bonita\ph all\mkdir app7\WhatsApp Image 2026-01-31 at 11.01.20 (1).jpeg",
-                    "c:\Users\LINUX\Desktop\casa bonita\ph all\mkdir app7\WhatsApp Image 2026-01-31 at 11.01.21 (3).jpeg",
-                    "c:\Users\LINUX\Desktop\casa bonita\ph all\mkdir app7\WhatsApp Image 2026-01-31 at 11.01.21 (4).jpeg",
-                    "c:\Users\LINUX\Desktop\casa bonita\ph all\mkdir app7\WhatsApp Image 2026-01-31 at 11.01.21 (5).jpeg"
+                    "image/mkdir app5/image 2.jpeg",
+                    "image/mkdir app5/image 3.jpeg",
+                    "image/mkdir app5/image 4.jpeg",
+                    "image/mkdir app5/image 5.jpeg",
+                    "image/mkdir app5/image 6.jpeg",
+                    "image/mkdir app5/image 7.jpeg",
+                    "image/mkdir app5/image 8.jpeg"
                 ]
             },
             6: {
